# infotecs-c-

./: CMakeLists.txt  client.cpp  server.cpp
src/: ClientApplication.cpp  ClientApplication.h  IErrorProcessor.h  ServerApplication.cpp  ServerApplication.h
src/net/: NetException.h  SocketAddress.cpp  SocketAddress.h  UdpSocket.cpp  UdpSocket.h  defs.h  net.h  privatedefs.h  unixdefs.cpp  unixdefs.h  windefs.cpp  windefs.h
